[ACHP: Website Requirement Analysis Work Order: Merge Changes into Dev Jan 17 2017 Task] Fixed another styling bug in IE in which margins applied to page element cause bounding boxes to overflow the maximum page width.

--- a/themes/achp/css/style.css
+++ b/themes/achp/css/style.css
@@ -11004,6 +11004,7 @@ body {
   letter-spacing: 0.02rem;
   line-height: 1.5;
   margin: 0;
+  overflow-x: hidden;
   padding: 0;
   -webkit-font-smoothing: antialiased;
   -moz-font-smoothing: antialiased; }
